<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HCDigital</string>
    <string name="app_header_tittle">HCDigital %1$s </string>

    <!-- Base Messages -->
    <string name="accept">Aceptar</string>
    <string name="cancel">Cancelar</string>
    <string name="delete">Eliminar</string>
    <string name="modify">Modificar</string>
    <string name="save">Guardar</string>
    <string name="close">Cerrar</string>
    <string name="anular">Anular</string>
    <string name="edit">Editar</string>
    <string name="add">Agregar</string>
    <string name="remove">Quitar</string>
    <string name="clean">Limpiar</string>
    <string name="print">Imprimir</string>
    <string name="continue_anyway">Continuar de todas formas</string>
    <string name="transfer">Transferir</string>
    <string name="yes">Si</string>
    <string name="no">No</string>
    <string name="exit">Salir</string>
	<string name="atencion">Atención</string>
    
    <!-- Application -->
    <string name="initialize_msg">Iniciando aplicación. Por favor espere…</string>
    <string name="app_crash">Se produjo un error, se perderán los datos no guardados</string>

    <!-- Main Activity -->
    <string name="change_orientation">Cambiar Disposición IMD</string>
    <string name="close_application">Cerrar Aplicación</string>
    <string name="registrar_IM">Registrar IM</string>
    <string name="synchronizing_msg">Sincronizando Aplicación…</string>
    <string name="synchronizing_item_msg">Sincronizando %1$s…</string>
    <string name="initializing_item_msg">Iniciando %1$s…</string>
    <string name="synchronized_item_label">Enviado</string>
    <string name="unsynchronized_item_label">Pendiente de Envío</string>
    <string name="list_empty">No existen Informes de Atención Médica disponibles</string>
    <string name="search_IM_title">Informes de Atención Médica</string>
    <string name="problem_solver">Solucionar Problemas</string>
    <string name="wype_sync_data">Limpiar y Sincronizar</string>
    <!-- Sign Activity Messages -->
    <string name="sign_title">Firmar</string>
    <string name="sign_done_msg">Agregar Firma</string>
    <string name="sign_text_msg">Firma de Paciente o Responsable</string>

    <!-- Register Activity Messages -->
    <string name="loading_msg">Cargando. Por favor espere…</string>
    <string name="saving_msg">Guardando. Por favor espere…</string>
    <string name="confirm_title">Por favor confirme</string>
    <string name="update_item_confirm_msg">¿Desea volver a cargar el campo? Los datos actuales serán actualizados</string>
    <string name="exit_confirm_msg">¿Está seguro que desea salir?</string>
    <string name="delete_all_confirm_msg">¿Está seguro que desea borrar los datos de la aplicacion? La aplicación se cerrará.</string>
    <string name="delete_atenciones_msg">¿Está seguro que desea borrar las atenciones?</string>
    <string name="delete_generic_data_msg">¿Está seguro que desea borrar los datos genericos de la aplicacion?</string>
    <string name="delete_item_confirm_msg">¿Está seguro que desea eliminar el item \"%1$s\"?</string>
    <string name="delete_tab_confirm_msg">¿Está seguro que desea eliminar la pestaña \"%1$s\"?</string>
    <string name="disable_section_title">Advertencia!</string>
    <string name="disable_section_msg">Al aceptar se deshabilitará la sección desmarcada</string>

    <!-- Register IM -->
    <string name="exit_IM_title">Existen IM sin guardar</string>
    <string name="exit_IM_warning">Si sale perderá los cambios que no haya guardado. ¿Está seguro que desea salir?</string>
    <string name="save_IM_ok">El Informe Médico se guardó satisfactoriamente</string>
    <string name="save_IM_error">Error al guardar Informe Médico</string>
    <string name="close_IMM_error_tittle">No es posible cerrar Informe Médico</string>
    <string name="close_IMM_error_msg">Si desea cerrar este Informe, primero debe cerrar el Informe Médico principal</string>
    <string name="obs_post_atencion_tittle">Observación Post-Atención</string>
    <string name="field_required">El campo \"%1$s\" no puede ser vacio.</string>
    <string name="min_lenght">El campo \"%1$s\" debe tener como mínimo \"%2$s\" caracteres.</string>
    <string name="field_required_lb">El campo \"%1$s\" debe incluir uno o más valores.</string>
    <string name="register_IM_default_title">Registrar IM Estandar</string>
    <string name="register_IM_default_warning">No se encontró IM precargado. ¿Registrar IM con perfil genérico?</string>
    <string name="codigo_atencion">Código de Atención: </string>
    <string name="invalid_option">Opción inválida</string>
    <string name="min_value">El campo \"%1$s\" debe ser mayor o igual a \"%2$s\" </string>
    <string name="max_value">El campo \"%1$s\" debe ser menor o igual a \"%2$s\" </string>
    
    <!-- Close IM -->
    <string name="close_IM_validate_error">Debe completar todos los campos requeridos</string>
    <string name="close_IM_title">Cierre de Informe Médico</string>
    <string name="close_IM_cierre_title">Datos del Cierre</string>
    <string name="close_IM_labels_title">Campos</string>
    <string name="close_IM_observaciones_msg">Observaciones</string>
    <string name="tipo_cierre_title">Tipo de Cierre: </string>
    <string name="tipo_cierre_select_prompt">Seleccione Tipo de Cierre</string>
    <string name="motivo_title">Motivo: </string>
    <string name="motivo_select_prompt">Seleccione Motivo</string>
    <string name="delete_tabHost_confirm_msg">¿Está seguro que desea eliminar el IM?</string>

    <!-- App blocked -->
    <string name="blocked_app_title">Bloqueo por Inactividad</string>
    <string name="blocked_app_id_label">Identificación:</string>
    <string name="blocked_app_id_hint">Ingrese su ID</string>
    <string name="blocked_app_password_label">Contraseña:</string>
    <string name="blocked_app_password_hint">Ingrese su contraseña</string>

    <!-- Login -->
    <string name="login_user_or_pass_error">Usuario o Contraseña incorrecto</string>
    <string name="login_user_permission_error">El Usuario no posee permisos para acceder a esta aplicación</string>
    <string name="update_available">Actualización disponible</string>
    <string name="update_install">¿Desea realizar la instalación de la actualización?</string>
    <string name="update_required">Versión de aplicación Inválida</string>
    <string name="update_blocked">Instalación de la actualización pendiente</string>
    <string name="session_lose">Error al iniciar sesión con UDAA</string>
    
    <!-- Impresion -->
    <string name="printing_msg">Generando reporte. Por favor espere…</string>
    <string name="guardar">"Guardar"</string>
    <string name="disconnect_wifi">"Desconectar de WiFi"</string>

    <!-- Transferencia por Bluetooth -->
    <string name="bt_transferring_msg">Generando reporte para transferir. Por favor espere…</string>
    <string name="bt_notfound">Adaptador Bluetooth no encontrado</string>
    
    <!-- Close AFILIACION -->
    <string name="close_form_validate_error">Debe completar todos los campos requeridos</string>
    <string name="close_form_tittle">Cierre de Afiliación</string>
    <string name="tipo_cierre_tittle">Tipo de Cierre: </string>
    <!--
    <string name="tipo_cierre_select_prompt">Seleccione Tipo de Cierre</string>
    -->
    <string name="motivo_tittle">Motivo: </string>
    <!--
    <string name="motivo_select_prompt">Seleccione Motivo</string>
    -->
    <string name= "close_promocion_tittle">Promoción: </string>
    <string name= "close_promocion_prompt">Seleccione Promoción</string>
    <string name="sign_titleAc">Aclaración</string>
    
    <!--  Guardar IMs -->
    <string name="guardarIM">Guardar Datos</string>
    <string name="exit_IM_warning_save">Al salir, se guardaran los datos del Informe Médico. ¿Está seguro que desea continuar?</string>
    <string name="exit_IMs_warning_save">Al salir, se guardaran los datos de lo Informes Médicos. ¿Está seguro que desea continuar?</string>
    
    <string name="cerrarSinActoMedico">Cerrar Sin Acto Médico</string>
    <string name="statusIcon">Icono de Estado</string>
    <string name="dispatcherImageDesc">Imagen del Despachador</string>
    <string name="imageDispatcherDetailDesc">dispatcherImageDetail</string>
    
    <!-- Export -->
    <string name="export">Exportar</string>
    <string name="synchronize">Sincronizar</string>
    <string name="error_reading_template">Error al leer template %1$, verifique si se encuentra el archivo.</string>
    <string name="error_generating_report">Error al leer generar reporte PDF, comuniquese con el administrador.</string>
    <string name="error_export">Error al exportar db, No se pudo escribir SDCard</string>
    <string name="error">Error</string>
    <string name="export_confirm_msg">¿Está seguro que desea exportar?</string>
     <string name="ok">OK</string>
     <string name="export_ok">Se exporto la base correctamente</string>
    
    <string name="maximo_adjuntos">Se ha alcanzado el máximo de adjuntos permitidos.</string>
    <string name="low_memory">Insuficiente memoria disponible. Intente nuevamente más tarde.</string>
    <string name="low_memory_restart">Insuficiente memoria disponible. Presione OK para reiniciar la aplicación.</string>
    <string name="mail_invalido">"El valor del campo \"%1$s\" es incorrecto".</string>
    
    
    <string name="mensaje_error_sync">No se completó correctamente la sincronización de la Aplicación con el Servidor.</string>
    
    
    <string name="refresh_list">Refrescar Lista</string>
    <string name="low_memory_alert_restart">Reiniciar</string>
    <string name="low_memory_alert_continue">Continuar</string>
    
    <string name="low_memory_restart_title">Memoria Insuficiente</string>
    <string name="low_memory_restart_description">La memoria es escasa ¿Desea continuar o reiniciar la aplicación?</string>
      
    <string name="Ecg_App_Confirm">Desea abrir la aplicación ECG?</string>
    <string name="Ecg_App_Unavailable">Ha habido un error de conexión con la apliacón ECG, desea cargar la información del estudio?</string>
    
    <string name="anclaje_activo">Anclaje Activo para transmitir el estudio ECG.</string>
    <string name="active_anclaje_para_transmitir">Active el anchlaje para transmitir el estudio ECG.</string>
    <string name="transmitir_ecg">Asegúrese que el estudio ECG sea transmitido.</string>
    <string name="inactive_anclaje_title">Inactivar Anclaje de red</string>
    <string name="inactive_anclaje_msg">Asegúrese que el estudio ECG sea transmitido. ¿Desea Inactivar Anclaje?</string>
    <string name="desconectar_anclaje">Desconectar Anclaje</string>
    <string name="conectar_anclaje">Conectar Anclaje</string>
    <string name="abrir">Abrir</string>
    <string name="sin_numero">Sin número</string>
    <string name="openudaa">Abrir URGAdmin</string>


</resources>