<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/crearFirmaLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="6dip"
            android:text="@string/sign_title"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <android.gesture.GestureOverlayView
        android:id="@+id/gestures_overlay"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1.0"
        android:gestureColor="@color/gesture_color"
        android:gestureStrokeType="multiple" >
    </android.gesture.GestureOverlayView>

    <LinearLayout
        style="@android:style/ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/confirm"
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:enabled="false"
            android:onClick="addGesture"
            android:text="@string/accept" />

        <Button
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="cancelGesture"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/cleanButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="clearGesture"
            android:text="@string/clean" />
    </LinearLayout>

</LinearLayout>