<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/linearLayout_contenedorbotonera"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/alerts"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.08"
            android:hint="Area de Notificaciones"
            android:inputType="textPostalAddress"
            android:visibility="gone" >
        </EditText>

        <TabWidget
            android:id="@android:id/tabs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0" />

        <FrameLayout
            android:id="@android:id/tabcontent"
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="1" />

        <LinearLayout
            android:id="@+id/linearLayout_botonera"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/printButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gray_border"
                android:drawableLeft="@drawable/ic_menu_print"
                android:gravity="center"
                android:onClick="DoPrintIM"
                android:text="@string/print"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gray_border"
                android:drawableLeft="@drawable/ic_menu_save"
                android:gravity="center"
                android:onClick="DoSaveTabHost"
                android:text="@string/save"
                android:textColor="#FFFFFF"
                android:visibility="gone" />

            <Button
                android:id="@+id/closeIMButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gray_border"
                android:drawableLeft="@android:drawable/ic_lock_lock"
                android:gravity="center"
                android:onClick="DoCloseIM"
                android:text="@string/close"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/addTabButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gray_border"
                android:drawableLeft="@drawable/ic_menu_add"
                android:gravity="center"
                android:onClick="DoAddTab"
                android:text="@string/add"
                android:textColor="#FFFFFF" />

            <Button
                android:id="@+id/closeTabButton"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/gray_border"
                android:drawableLeft="@drawable/ic_menu_delete"
                android:gravity="center"
                android:onClick="DoCloseTab"
                android:text="@string/delete"
                android:textColor="#FFFFFF"
                android:visibility="gone" />
        </LinearLayout>
    </LinearLayout>

</TabHost>