<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative01"
    android:background="@color/default_background_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:background="@color/default_background_color"
	    android:orientation="vertical" >
	
	    <LinearLayout
	        android:id="@+id/header"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@color/label_background_color"
	        android:gravity="center_vertical" >
	
	        <TextView
	            android:id="@+id/title"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="5dp"
	            android:text="@string/search_IM_title"
	            android:textAppearance="?android:attr/textAppearanceMedium"
	            android:textColor="@color/label_text_color" />
	
	        <LinearLayout
	            android:id="@+id/linearLayout2"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:gravity="right" >
	
	            <ImageButton
	                android:id="@+id/registrarIM"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:background="@color/label_background_color"
	                android:onClick="DoRegisterIM"
	                android:src="@drawable/ic_menu_add" />
	        </LinearLayout>
	    </LinearLayout>
	    <!-- List Divider -->
	
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="1dip"
	        android:background="@color/line_background_color" />



		<FrameLayout
			android:id="@android:id/tabcontent"
			android:layout_width="fill_parent"
			android:layout_height="0dip"
			android:layout_weight="1" >


			<ListView
				android:id="@android:id/list"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:gravity="center"></ListView>

			<TextView android:id="@android:id/empty"
				android:layout_width="wrap_content"
				android:layout_height="0dip"
				android:layout_weight="1.0"
				android:textSize="14dp"
				android:text="@string/list_empty"
				/>

		</FrameLayout>





    <LinearLayout
        android:id="@+id/layoutBtn"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >

		<Button
			android:id="@+id/btnMsjDigital"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_centerVertical="true"
			android:layout_gravity="center_horizontal|center"
			android:layout_weight="1"
			android:text="MSJ Digital" />

    </LinearLayout>
	

	      
	    <!-- List Divider -->
	
	    <View
	        android:layout_width="match_parent"
	        android:layout_height="1dip"
	        android:background="@android:color/darker_gray" />
	
	</LinearLayout>
	
	<LinearLayout
	    android:id="@+id/bottomView"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_alignParentBottom="true"
	    android:layout_alignParentLeft="true"
	    android:background="@color/default_background_color"
	    android:orientation="vertical" >
	
	    <TextView
	        android:id="@+id/notificacion_app_update"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:visibility="gone"
	        android:gravity="center_vertical|center_horizontal"
	        android:text="@string/update_available"
	        android:textColor="@color/red" 
	        android:textStyle="bold"/>
	   	<TextView
	        android:id="@+id/mensaje_error_sync"
	        android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:visibility="gone"
	        android:gravity="center_vertical|center_horizontal"
	        android:text="@string/mensaje_error_sync"
	        android:textColor="@color/blue" 
	        android:textStyle="bold"/>	
	</LinearLayout>



</RelativeLayout>